<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="..."
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:hint="请输入用户名"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:hint="请输入密码"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:text="登录"
        android:onClick="login"
        android:layout_height="45dp" />


</LinearLayout>
